Bug fixed + CSS Adjust + Added New Content 1) Fixed url bug in cs-match.html 2) Adjusted css style of whole page.  - make header color not that red  - cs-match font size + icon vertical align adjust

--- a/css/style-main.css
+++ b/css/style-main.css
@@ -6,7 +6,6 @@ body
 	margin: 0px;
 	padding: 0px;
 	font-family: "Roboto", "Open Sans", Arial;
-	-webkit-font-smoothing: antialiased;
 	background-color: #070707;
 	color: #FFFFFF;
 	text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.8);
@@ -119,16 +118,16 @@ header > nav > li > a
 header > nav > li > a:hover
 {
 	transition: all 300ms;
-	text-shadow:0px 0px 20px #FF7700,
-				2px 0px 20px #FF7700,
-				-2px 0px 20px #FF7700,
-				0px 2px 20px #FF7700,
-				0px -2px 20px #FF7700;
+	text-shadow:0px 0px 20px #FF5500,
+				2px 0px 20px #FF5500,
+				-2px 0px 20px #FF5500,
+				0px 2px 20px #FF5500,
+				0px -2px 20px #FF5500;
 }
 
 header > nav > li a.selected
 {
-	border-bottom: 3px solid #FF3300;
+	border-bottom: 3px solid #FF5500;
 }
 
 header > nav > li > a:active
@@ -168,10 +167,10 @@ main > section
 
 main > section > h1
 {
-	color: #FF3300;
-	font-weight: 600;
-	font-size: 3.6rem;
+	color: #FF5500;
+	font-weight: 400;
+	font-size: 2.4rem;
 	letter-spacing: 1px;
-	text-shadow: 0px 0px 7px #FF3300;
+	text-shadow: 0px 0px 7px #FF5500;
 }
 
